@@ -63,7 +63,7 @@ void test(double d1, double d2, double d3,
      || FN##l(powl(ld1,ld2)) != powl(ld1,ld2/N)) \
     link_failure_##FN##_pow()
 
-  ROOT_POW(sqrt,2);
+  /*ROOT_POW(sqrt,2); Invalid. */
   /*ROOT_POW(cbrt,3); Intentionally not implemented.  */
 
   /* Test pow(pow(x,y),z) -> pow(x,y*z).  */
