@@ -1,3 +1,10 @@
+2005-02-07  Richard Guenther  <rguenth@gcc.gnu.org>
+
+	PR middle-end/19775
+	* builtins.c (fold_builtin_sqrt): Transform
+	sqrt(pow(x,y)) to pow(fabs(x),y*0.5), not
+	pow(x,y*0.5).
+
 2005-02-07  Leehod Baruch  <leehod@il.ibm.com>
 	    Dorit Naishlos  <dorit@il.ibm.com>
 
